message(STATUS "fftw build Configuration")

include_directories(.)
include_directories(src/api)
include_directories(src/kernel)
include_directories(src/dft)
include_directories(src/dft/scalar)
include_directories(src/rdft)
include_directories(src/rdft/scalar)
include_directories(src/reodft)

set(fftw_Libs)
set(fftw_Sources 
src/api/apiplan.c
src/api/configure.c
src/api/execute.c
src/api/execute-dft.c
src/api/execute-dft-c2r.c
src/api/execute-dft-r2c.c
src/api/execute-r2r.c
src/api/execute-split-dft.c
src/api/execute-split-dft-c2r.c
src/api/execute-split-dft-r2c.c
src/api/export-wisdom.c
src/api/export-wisdom-to-file.c
src/api/export-wisdom-to-string.c
src/api/f77api.c
src/api/flops.c
src/api/forget-wisdom.c
src/api/import-system-wisdom.c
src/api/import-wisdom.c
src/api/import-wisdom-from-file.c
src/api/import-wisdom-from-string.c
src/api/malloc.c
src/api/mapflags.c
src/api/map-r2r-kind.c
src/api/mkprinter-file.c
src/api/mktensor-iodims64.c
src/api/mktensor-iodims.c
src/api/mktensor-rowmajor.c
src/api/plan-dft-1d.c
src/api/plan-dft-2d.c
src/api/plan-dft-3d.c
src/api/plan-dft.c
src/api/plan-dft-c2r-1d.c
src/api/plan-dft-c2r-2d.c
src/api/plan-dft-c2r-3d.c
src/api/plan-dft-c2r.c
src/api/plan-dft-r2c-1d.c
src/api/plan-dft-r2c-2d.c
src/api/plan-dft-r2c-3d.c
src/api/plan-dft-r2c.c
src/api/plan-guru64-dft.c
src/api/plan-guru64-dft-c2r.c
src/api/plan-guru64-dft-r2c.c
src/api/plan-guru64-r2r.c
src/api/plan-guru64-split-dft.c
src/api/plan-guru64-split-dft-c2r.c
src/api/plan-guru64-split-dft-r2c.c
src/api/plan-guru-dft.c
src/api/plan-guru-dft-c2r.c
src/api/plan-guru-dft-r2c.c
src/api/plan-guru-r2r.c
src/api/plan-guru-split-dft.c
src/api/plan-guru-split-dft-c2r.c
src/api/plan-guru-split-dft-r2c.c
src/api/plan-many-dft.c
src/api/plan-many-dft-c2r.c
src/api/plan-many-dft-r2c.c
src/api/plan-many-r2r.c
src/api/plan-r2r-1d.c
src/api/plan-r2r-2d.c
src/api/plan-r2r-3d.c
src/api/plan-r2r.c
src/api/print-plan.c
src/api/rdft2-pad.c
src/api/the-planner.c
src/api/version.c

src/kernel/align.c
src/kernel/alloc.c
src/kernel/assert.c
src/kernel/awake.c
src/kernel/buffered.c
src/kernel/cpy1d.c
src/kernel/cpy2d.c
src/kernel/cpy2d-pair.c
src/kernel/ct.c
src/kernel/debug.c
src/kernel/extract-reim.c
src/kernel/hash.c
src/kernel/iabs.c
src/kernel/kalloc.c
src/kernel/md5-1.c
src/kernel/md5.c
src/kernel/minmax.c
src/kernel/ops.c
src/kernel/pickdim.c
src/kernel/plan.c
src/kernel/planner.c
src/kernel/primes.c
src/kernel/print.c
src/kernel/problem.c
src/kernel/rader.c
src/kernel/scan.c
src/kernel/solver.c
src/kernel/solvtab.c
src/kernel/stride.c
src/kernel/tensor1.c
src/kernel/tensor2.c
src/kernel/tensor3.c
src/kernel/tensor4.c
src/kernel/tensor5.c
src/kernel/tensor7.c
src/kernel/tensor8.c
src/kernel/tensor9.c
src/kernel/tensor.c
src/kernel/tile2d.c
src/kernel/timer.c
src/kernel/transpose.c
src/kernel/trig.c
src/kernel/twiddle.c

src/dft/bluestein.c
src/dft/buffered.c
src/dft/conf.c
src/dft/ct.c
src/dft/dftw-direct.c
src/dft/dftw-directsq.c
src/dft/dftw-genericbuf.c
src/dft/dftw-generic.c
src/dft/direct.c
src/dft/generic.c
src/dft/indirect.c
src/dft/indirect-transpose.c
src/dft/kdft.c
src/dft/kdft-dif.c
src/dft/kdft-difsq.c
src/dft/kdft-dit.c
src/dft/nop.c
src/dft/plan.c
src/dft/problem.c
src/dft/rader.c
src/dft/rank-geq2.c
src/dft/solve.c
src/dft/vrank-geq1.c
src/dft/zero.c
src/dft/scalar/n.c
src/dft/scalar/t.c
src/dft/scalar/codelets/codlist.c
src/dft/scalar/codelets/n1_10.c
src/dft/scalar/codelets/n1_11.c
src/dft/scalar/codelets/n1_12.c
src/dft/scalar/codelets/n1_13.c
src/dft/scalar/codelets/n1_14.c
src/dft/scalar/codelets/n1_15.c
src/dft/scalar/codelets/n1_16.c
src/dft/scalar/codelets/n1_20.c
src/dft/scalar/codelets/n1_25.c
src/dft/scalar/codelets/n1_2.c
src/dft/scalar/codelets/n1_32.c
src/dft/scalar/codelets/n1_3.c
src/dft/scalar/codelets/n1_4.c
src/dft/scalar/codelets/n1_5.c
src/dft/scalar/codelets/n1_64.c
src/dft/scalar/codelets/n1_6.c
src/dft/scalar/codelets/n1_7.c
src/dft/scalar/codelets/n1_8.c
src/dft/scalar/codelets/n1_9.c
src/dft/scalar/codelets/q1_2.c
src/dft/scalar/codelets/q1_3.c
src/dft/scalar/codelets/q1_4.c
src/dft/scalar/codelets/q1_5.c
src/dft/scalar/codelets/q1_6.c
src/dft/scalar/codelets/q1_8.c
src/dft/scalar/codelets/t1_10.c
src/dft/scalar/codelets/t1_12.c
src/dft/scalar/codelets/t1_15.c
src/dft/scalar/codelets/t1_16.c
src/dft/scalar/codelets/t1_20.c
src/dft/scalar/codelets/t1_25.c
src/dft/scalar/codelets/t1_2.c
src/dft/scalar/codelets/t1_32.c
src/dft/scalar/codelets/t1_3.c
src/dft/scalar/codelets/t1_4.c
src/dft/scalar/codelets/t1_5.c
src/dft/scalar/codelets/t1_64.c
src/dft/scalar/codelets/t1_6.c
src/dft/scalar/codelets/t1_7.c
src/dft/scalar/codelets/t1_8.c
src/dft/scalar/codelets/t1_9.c
src/dft/scalar/codelets/t2_10.c
src/dft/scalar/codelets/t2_16.c
src/dft/scalar/codelets/t2_20.c
src/dft/scalar/codelets/t2_25.c
src/dft/scalar/codelets/t2_32.c
src/dft/scalar/codelets/t2_4.c
src/dft/scalar/codelets/t2_5.c
src/dft/scalar/codelets/t2_64.c
src/dft/scalar/codelets/t2_8.c

src/rdft/buffered2.c
src/rdft/buffered.c
src/rdft/conf.c
src/rdft/ct-hc2c.c
src/rdft/ct-hc2c-direct.c
src/rdft/dft-r2hc.c
src/rdft/dht-r2hc.c
src/rdft/dht-rader.c
src/rdft/direct2.c
src/rdft/direct-r2c.c
src/rdft/direct-r2r.c
src/rdft/generic.c
src/rdft/hc2hc.c
src/rdft/hc2hc-direct.c
src/rdft/hc2hc-generic.c
src/rdft/indirect.c
src/rdft/khc2c.c
src/rdft/khc2hc.c
src/rdft/kr2c.c
src/rdft/kr2r.c
src/rdft/nop2.c
src/rdft/nop.c
src/rdft/plan2.c
src/rdft/plan.c
src/rdft/problem2.c
src/rdft/problem.c
src/rdft/rank0.c
src/rdft/rank0-rdft2.c
src/rdft/rank-geq2.c
src/rdft/rank-geq2-rdft2.c
src/rdft/rdft2-inplace-strides.c
src/rdft/rdft2-rdft.c
src/rdft/rdft2-strides.c
src/rdft/rdft2-tensor-max-index.c
src/rdft/rdft-dht.c
src/rdft/solve2.c
src/rdft/solve.c
src/rdft/vrank3-transpose.c
src/rdft/vrank-geq1.c
src/rdft/vrank-geq1-rdft2.c
src/rdft/scalar/hc2c.c
src/rdft/scalar/hfb.c
src/rdft/scalar/r2c.c
src/rdft/scalar/r2r.c
src/rdft/scalar/r2cb/codlist.c
src/rdft/scalar/r2cb/hb_10.c
src/rdft/scalar/r2cb/hb_12.c
src/rdft/scalar/r2cb/hb_15.c
src/rdft/scalar/r2cb/hb_16.c
src/rdft/scalar/r2cb/hb_20.c
src/rdft/scalar/r2cb/hb2_16.c
src/rdft/scalar/r2cb/hb2_20.c
src/rdft/scalar/r2cb/hb2_25.c
src/rdft/scalar/r2cb/hb2_32.c
src/rdft/scalar/r2cb/hb2_4.c
src/rdft/scalar/r2cb/hb_25.c
src/rdft/scalar/r2cb/hb2_5.c
src/rdft/scalar/r2cb/hb2_8.c
src/rdft/scalar/r2cb/hb_2.c
src/rdft/scalar/r2cb/hb_32.c
src/rdft/scalar/r2cb/hb_3.c
src/rdft/scalar/r2cb/hb_4.c
src/rdft/scalar/r2cb/hb_5.c
src/rdft/scalar/r2cb/hb_64.c
src/rdft/scalar/r2cb/hb_6.c
src/rdft/scalar/r2cb/hb_7.c
src/rdft/scalar/r2cb/hb_8.c
src/rdft/scalar/r2cb/hb_9.c
src/rdft/scalar/r2cb/hc2cb_10.c
src/rdft/scalar/r2cb/hc2cb_12.c
src/rdft/scalar/r2cb/hc2cb_16.c
src/rdft/scalar/r2cb/hc2cb_20.c
src/rdft/scalar/r2cb/hc2cb2_16.c
src/rdft/scalar/r2cb/hc2cb2_20.c
src/rdft/scalar/r2cb/hc2cb2_32.c
src/rdft/scalar/r2cb/hc2cb2_4.c
src/rdft/scalar/r2cb/hc2cb2_8.c
src/rdft/scalar/r2cb/hc2cb_2.c
src/rdft/scalar/r2cb/hc2cb_32.c
src/rdft/scalar/r2cb/hc2cb_4.c
src/rdft/scalar/r2cb/hc2cb_6.c
src/rdft/scalar/r2cb/hc2cb_8.c
src/rdft/scalar/r2cb/hc2cbdft_10.c
src/rdft/scalar/r2cb/hc2cbdft_12.c
src/rdft/scalar/r2cb/hc2cbdft_16.c
src/rdft/scalar/r2cb/hc2cbdft_20.c
src/rdft/scalar/r2cb/hc2cbdft2_16.c
src/rdft/scalar/r2cb/hc2cbdft2_20.c
src/rdft/scalar/r2cb/hc2cbdft2_32.c
src/rdft/scalar/r2cb/hc2cbdft2_4.c
src/rdft/scalar/r2cb/hc2cbdft2_8.c
src/rdft/scalar/r2cb/hc2cbdft_2.c
src/rdft/scalar/r2cb/hc2cbdft_32.c
src/rdft/scalar/r2cb/hc2cbdft_4.c
src/rdft/scalar/r2cb/hc2cbdft_6.c
src/rdft/scalar/r2cb/hc2cbdft_8.c
src/rdft/scalar/r2cb/r2cb_10.c
src/rdft/scalar/r2cb/r2cb_11.c
src/rdft/scalar/r2cb/r2cb_128.c
src/rdft/scalar/r2cb/r2cb_12.c
src/rdft/scalar/r2cb/r2cb_13.c
src/rdft/scalar/r2cb/r2cb_14.c
src/rdft/scalar/r2cb/r2cb_15.c
src/rdft/scalar/r2cb/r2cb_16.c
src/rdft/scalar/r2cb/r2cb_20.c
src/rdft/scalar/r2cb/r2cb_25.c
src/rdft/scalar/r2cb/r2cb_2.c
src/rdft/scalar/r2cb/r2cb_32.c
src/rdft/scalar/r2cb/r2cb_3.c
src/rdft/scalar/r2cb/r2cb_4.c
src/rdft/scalar/r2cb/r2cb_5.c
src/rdft/scalar/r2cb/r2cb_64.c
src/rdft/scalar/r2cb/r2cb_6.c
src/rdft/scalar/r2cb/r2cb_7.c
src/rdft/scalar/r2cb/r2cb_8.c
src/rdft/scalar/r2cb/r2cb_9.c
src/rdft/scalar/r2cb/r2cbIII_10.c
src/rdft/scalar/r2cb/r2cbIII_12.c
src/rdft/scalar/r2cb/r2cbIII_15.c
src/rdft/scalar/r2cb/r2cbIII_16.c
src/rdft/scalar/r2cb/r2cbIII_20.c
src/rdft/scalar/r2cb/r2cbIII_25.c
src/rdft/scalar/r2cb/r2cbIII_2.c
src/rdft/scalar/r2cb/r2cbIII_32.c
src/rdft/scalar/r2cb/r2cbIII_3.c
src/rdft/scalar/r2cb/r2cbIII_4.c
src/rdft/scalar/r2cb/r2cbIII_5.c
src/rdft/scalar/r2cb/r2cbIII_64.c
src/rdft/scalar/r2cb/r2cbIII_6.c
src/rdft/scalar/r2cb/r2cbIII_7.c
src/rdft/scalar/r2cb/r2cbIII_8.c
src/rdft/scalar/r2cb/r2cbIII_9.c
src/rdft/scalar/r2cf/codlist.c
src/rdft/scalar/r2cf/hc2cf_10.c
src/rdft/scalar/r2cf/hc2cf_12.c
src/rdft/scalar/r2cf/hc2cf_16.c
src/rdft/scalar/r2cf/hc2cf_20.c
src/rdft/scalar/r2cf/hc2cf2_16.c
src/rdft/scalar/r2cf/hc2cf2_20.c
src/rdft/scalar/r2cf/hc2cf2_32.c
src/rdft/scalar/r2cf/hc2cf2_4.c
src/rdft/scalar/r2cf/hc2cf2_8.c
src/rdft/scalar/r2cf/hc2cf_2.c
src/rdft/scalar/r2cf/hc2cf_32.c
src/rdft/scalar/r2cf/hc2cf_4.c
src/rdft/scalar/r2cf/hc2cf_6.c
src/rdft/scalar/r2cf/hc2cf_8.c
src/rdft/scalar/r2cf/hc2cfdft_10.c
src/rdft/scalar/r2cf/hc2cfdft_12.c
src/rdft/scalar/r2cf/hc2cfdft_16.c
src/rdft/scalar/r2cf/hc2cfdft_20.c
src/rdft/scalar/r2cf/hc2cfdft2_16.c
src/rdft/scalar/r2cf/hc2cfdft2_20.c
src/rdft/scalar/r2cf/hc2cfdft2_32.c
src/rdft/scalar/r2cf/hc2cfdft2_4.c
src/rdft/scalar/r2cf/hc2cfdft2_8.c
src/rdft/scalar/r2cf/hc2cfdft_2.c
src/rdft/scalar/r2cf/hc2cfdft_32.c
src/rdft/scalar/r2cf/hc2cfdft_4.c
src/rdft/scalar/r2cf/hc2cfdft_6.c
src/rdft/scalar/r2cf/hc2cfdft_8.c
src/rdft/scalar/r2cf/hf_10.c
src/rdft/scalar/r2cf/hf_12.c
src/rdft/scalar/r2cf/hf_15.c
src/rdft/scalar/r2cf/hf_16.c
src/rdft/scalar/r2cf/hf_20.c
src/rdft/scalar/r2cf/hf2_16.c
src/rdft/scalar/r2cf/hf2_20.c
src/rdft/scalar/r2cf/hf2_25.c
src/rdft/scalar/r2cf/hf2_32.c
src/rdft/scalar/r2cf/hf2_4.c
src/rdft/scalar/r2cf/hf_25.c
src/rdft/scalar/r2cf/hf2_5.c
src/rdft/scalar/r2cf/hf2_8.c
src/rdft/scalar/r2cf/hf_2.c
src/rdft/scalar/r2cf/hf_32.c
src/rdft/scalar/r2cf/hf_3.c
src/rdft/scalar/r2cf/hf_4.c
src/rdft/scalar/r2cf/hf_5.c
src/rdft/scalar/r2cf/hf_64.c
src/rdft/scalar/r2cf/hf_6.c
src/rdft/scalar/r2cf/hf_7.c
src/rdft/scalar/r2cf/hf_8.c
src/rdft/scalar/r2cf/hf_9.c
src/rdft/scalar/r2cf/r2cf_10.c
src/rdft/scalar/r2cf/r2cf_11.c
src/rdft/scalar/r2cf/r2cf_128.c
src/rdft/scalar/r2cf/r2cf_12.c
src/rdft/scalar/r2cf/r2cf_13.c
src/rdft/scalar/r2cf/r2cf_14.c
src/rdft/scalar/r2cf/r2cf_15.c
src/rdft/scalar/r2cf/r2cf_16.c
src/rdft/scalar/r2cf/r2cf_20.c
src/rdft/scalar/r2cf/r2cf_25.c
src/rdft/scalar/r2cf/r2cf_2.c
src/rdft/scalar/r2cf/r2cf_32.c
src/rdft/scalar/r2cf/r2cf_3.c
src/rdft/scalar/r2cf/r2cf_4.c
src/rdft/scalar/r2cf/r2cf_5.c
src/rdft/scalar/r2cf/r2cf_64.c
src/rdft/scalar/r2cf/r2cf_6.c
src/rdft/scalar/r2cf/r2cf_7.c
src/rdft/scalar/r2cf/r2cf_8.c
src/rdft/scalar/r2cf/r2cf_9.c
src/rdft/scalar/r2cf/r2cfII_10.c
src/rdft/scalar/r2cf/r2cfII_12.c
src/rdft/scalar/r2cf/r2cfII_15.c
src/rdft/scalar/r2cf/r2cfII_16.c
src/rdft/scalar/r2cf/r2cfII_20.c
src/rdft/scalar/r2cf/r2cfII_25.c
src/rdft/scalar/r2cf/r2cfII_2.c
src/rdft/scalar/r2cf/r2cfII_32.c
src/rdft/scalar/r2cf/r2cfII_3.c
src/rdft/scalar/r2cf/r2cfII_4.c
src/rdft/scalar/r2cf/r2cfII_5.c
src/rdft/scalar/r2cf/r2cfII_64.c
src/rdft/scalar/r2cf/r2cfII_6.c
src/rdft/scalar/r2cf/r2cfII_7.c
src/rdft/scalar/r2cf/r2cfII_8.c
src/rdft/scalar/r2cf/r2cfII_9.c
src/rdft/scalar/r2r/codlist.c
src/rdft/scalar/r2r/e01_8.c
src/rdft/scalar/r2r/e10_8.c

src/reodft/conf.c
src/reodft/redft00e-r2hc.c
src/reodft/redft00e-r2hc-pad.c
src/reodft/reodft00e-splitradix.c
src/reodft/reodft010e-r2hc.c
src/reodft/reodft11e-r2hc.c
src/reodft/reodft11e-r2hc-odd.c
src/reodft/reodft11e-radix2.c
src/reodft/rodft00e-r2hc.c
src/reodft/rodft00e-r2hc-pad.c
)

configure_file(src/api/fftw3.h ${CMAKE_BINARY_DIR}/lib/fftw/fftw3.h @ONLY)

add_library(fftw STATIC ${fftw_Sources})
target_link_libraries(fftw ${fftw_Libs})

message(STATUS "============================================================================")
